[gd_scene load_steps=12 format=3 uid="uid://bhk0hnw8567lt"]

[ext_resource type="Script" path="res://Scripts/square_enemy.gd" id="1_7nuye"]
[ext_resource type="Texture2D" uid="uid://ds27yhfosdg66" path="res://Assets/Sprites/Enemy Sprites/SquareSpawner2-1.png (2).png" id="1_wolep"]
[ext_resource type="Shader" uid="uid://dm6255ea31qd6" path="res://Shaders/HitFlash.tres" id="2_bfr0y"]

[sub_resource type="CircleShape2D" id="CircleShape2D_f7lcy"]
radius = 26.5707

[sub_resource type="ShaderMaterial" id="ShaderMaterial_q707y"]
resource_local_to_scene = true
shader = ExtResource("2_bfr0y")
shader_parameter/enabled = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_u0a58"]
resource_local_to_scene = true
shader = ExtResource("2_bfr0y")
shader_parameter/enabled = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_vvx1a"]
radius = 30.3645

[sub_resource type="Animation" id="Animation_dsjhw"]
resource_name = "RBody_HitFlash"
length = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/Sprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_utymt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/Sprite2D:material:shader_parameter/enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_bvp38"]
resource_name = "Shield_HitFlash"
length = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pggkw"]
_data = {
"RBody_HitFlash": SubResource("Animation_dsjhw"),
"RESET": SubResource("Animation_utymt"),
"Shield_HitFlash": SubResource("Animation_bvp38")
}

[node name="SquareEnemy" type="CharacterBody2D" groups=["Enemy"]]
script = ExtResource("1_7nuye")

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_f7lcy")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_q707y")
scale = Vector2(0.359, 0.359)
texture = ExtResource("1_wolep")

[node name="Sprite2D" type="Sprite2D" parent="Sprite2D"]
material = SubResource("ShaderMaterial_u0a58")
scale = Vector2(0.478, 0.478)
texture = ExtResource("1_wolep")

[node name="DamageHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageHitbox"]
shape = SubResource("CircleShape2D_vvx1a")
debug_color = Color(1, 0, 0, 0)

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(39, 0)

[node name="Node2D2" type="Node2D" parent="."]
position = Vector2(0, 39)

[node name="Node2D3" type="Node2D" parent="."]
position = Vector2(-39, 0)

[node name="Node2D4" type="Node2D" parent="."]
position = Vector2(0, -39)

[node name="HitEffect" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pggkw")
}

[connection signal="body_entered" from="DamageHitbox" to="." method="_on_damage_hitbox_body_entered"]
[connection signal="body_exited" from="DamageHitbox" to="." method="_on_damage_hitbox_body_exited"]
